<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/round"
            android:orientation="vertical"
            android:padding="3dp">

            <Button
                android:id="@+id/button_load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load" />

            <Button
                android:id="@+id/button_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show" />

            <Button
                android:id="@+id/button_clear_cap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_cap" />

            <Button
                android:id="@+id/button_get_cap_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_cap_status" />

            <Button
                android:id="@+id/button_set_cap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_cap" />

            <Button
                android:id="@+id/button_reset_cap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_cap" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/wifi_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:padding="8dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/vamp_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="adidtext"
                    android:gravity="center"
                    android:padding="8dp" />

            </FrameLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/logs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="logtext"
                android:textIsSelectable="true" />
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
